Fix some cases in code loading